# hiphy

./: Dockerfile  Hiphy.cabal  README.md  docker-compose.yml
src/Network/: Giphy.hs
