name:                Hiphy
version:             0.1.0.0
synopsis:            Giphy API client
description:         Giphy API client
license:             GPL-2
license-file:        LICENSE
author:              San Gillis
maintainer:          gillis.san@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.Giphy
  build-depends:       base >=4.8 && <4.9,
                       http-conduit >=2.1 && <2.2,
                       network >=2.6 && <2.7,
                       text >=1.2 && <1.3,
                       bytestring >=0.10 && <0.11,
                       url >=2.1 && <2.2,
                       aeson >=0.9 && <0.10,
                       time >=1.5 && <1.6,
                       data-default >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
