name:                Hiphy
version:             0.1.0.0
synopsis:            Giphy API client
description:         Giphy API client
license:             GPL-2
license-file:        LICENSE
author:              San Gillis
maintainer:          gillis.san@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.Giphy
  build-depends:       base >=4.8 && <4.9,
                       http-conduit,
                       network,
                       text,
                       bytestring,
                       url,
                       aeson,
                       time,
                       data-default
  hs-source-dirs:      src
  default-language:    Haskell2010
